<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="IO_typ" Id="{ea205016-8f1b-0d1c-2b29-aead27e63e0a}">
    <Declaration><![CDATA[TYPE IO_typ:
STRUCT
	Orient: 	Orient_IO_typ;
	BallSeat:	BallSeat_IO_typ;
	Print:		Print_IO_typ;
	Vision:		Vision_IO_typ;
	Kickout:	Kickout_IO_typ;
	TrayLoad:	TrayLoad_IO_typ;
	Test		AT %I*: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>