<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="JobState_enum" Id="{9e385f91-6540-0626-3b8f-c0673f2fe017}">
    <Declaration><![CDATA[{attribute 'strict'}
{attribute 'to_string'}
TYPE JobState_enum :
(
	Job_Disabled 	:= 0,
	Job_Starting	:= 1,
	Job_Running		:= 2,
	Job_Pausing		:= 3,
	Job_Paused		:= 4,
	Job_Done		:= 5,
	Job_Cleanout	:= 6
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>