<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="JobSts_typ" Id="{a621aee0-5f0f-0e3c-0abe-2e3e9688878a}">
    <Declaration><![CDATA[TYPE JobSts_typ :
STRUCT
	Running:					BOOL;
	Done:						BOOL;
	CleanoutDone:				BOOL;
	PlayerNumberCount:			ARRAY[0..3] OF UDINT;
	RejectedPlayerNumberCount:	ARRAY[0..3] OF UDINT;
	PrintedPlayerNumberCount:	ARRAY[0..3] OF UDINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>